# server/src/app.js
@@ -11,7 +11,7 @@ import chalk from 'chalk';
 
 // api
 import auth from './api/auth.js';
-import posts from './api/posts.js';
+import bookmarks from './api/bookmarks.js';
 import products from './api/products.js';
 import docs from './utils/api-doc.js';
 
@@ -52,7 +52,7 @@ app.use(morgan('dev')); // log request
 
 // express routers
 app.use('/', auth);
-app.use('/posts', authenticateUser, posts);
+app.use('/bookmarks', authenticateUser, bookmarks);
 app.use('/products', products);
 
 // api docs
